# aclimate_v3_historical_location_etl

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  dev.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml  release.yml  stage-to-main.yml
src/aclimate_v3_historical_location_etl/: __init__.py  aclimate_run_etl.py  climatology_calculator.py  data_aggregator.py  data_validator.py  database_manager.py  geoserver_client.py
src/aclimate_v3_historical_location_etl/climate_processing/: __init__.py  climatology_calculator.py  data_aggregator.py  indicators_processor.py
src/aclimate_v3_historical_location_etl/climate_processing/indicators/: __init__.py  base_calculator.py  calculator_loader.py  data_fetcher.py  percentile_calculator.py
src/aclimate_v3_historical_location_etl/climate_processing/indicators/calculators/: __init__.py  canic.py  iell.py  iels.py  prcd.py
src/aclimate_v3_historical_location_etl/data_managment/: __init__.py  csv_client.py  data_validator.py  database_manager.py  geoserver_client.py
src/aclimate_v3_historical_location_etl/tools/: logging_manager.py  tools.py
tests/: __init__.py  test_basic.py  test_climatology_calculator.py  test_climatology_calculator_unit.py  test_data_validator_unit.py  test_database_manager.py  test_database_manager_unit.py  test_geoserver_client.py  test_logging_manager.py  test_tools.py
