[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "aclimate-v3-historical-location-etl"
version = "0.0.2"
description = "ETL para procesamiento de datos históricos climaticos para locaciones de AClimate v3"
readme = "README.md"
requires-python = ">=3.10"
keywords = [ "etl", "climate", "data", "historical", "location",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10",]
dependencies = [ "opentelemetry-api==1.22.0", "opentelemetry-distro==0.43b0", "opentelemetry-exporter-otlp==1.22.0", "opentelemetry-exporter-otlp-proto-common==1.22.0", "opentelemetry-exporter-otlp-proto-grpc==1.22.0", "opentelemetry-exporter-otlp-proto-http==1.22.0", "opentelemetry-instrumentation==0.43b0", "opentelemetry-proto==1.22.0", "opentelemetry-sdk==1.22.0", "opentelemetry-semantic-conventions==0.43b0", "python-dotenv>=0.19.0",]
[[project.authors]]
name = "Santiago Calderon"
email = "s.calderon@cgiar.org"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [ "pytest>=6.0", "pytest-cov>=4.0", "black>=22.0", "flake8>=4.0", "mypy>=0.900", "toml>=0.10.0",]

[project.urls]
Homepage = "https://github.com/CIAT-DAPA/aclimate_v3_historical_location_etl"
Repository = "https://github.com/CIAT-DAPA/aclimate_v3_historical_location_etl"
"Bug Tracker" = "https://github.com/CIAT-DAPA/aclimate_v3_historical_location_etl/issues"

[tool.black]
line-length = 88
target-version = [ "py310",]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = [ "aclimate_v3_historical_location_etl",]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test*",]
python_functions = [ "test_*",]
addopts = [ "--strict-markers", "--strict-config", "--verbose", "--tb=short", "--cov=src", "--cov-report=term-missing", "--cov-report=html", "--cov-report=xml", "--cov-fail-under=60",]
markers = [ "slow: marks tests as slow (deselect with '-m \"not slow\"')", "integration: marks tests as integration tests", "unit: marks tests as unit tests",]

[tool.coverage.run]
source = [ "src",]
branch = true
omit = [ "*/tests/*", "*/test_*", "*/conftest.py",]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]

[tool.setuptools.packages.find]
where = [ "src",]
